--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  timeago: ^3.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,6 +50,8 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   logger: ^1.4.0
   comment_box: ^0.0.18
+  image_picker: ^1.0.0
+ 
 
 dev_dependencies:
   flutter_test:
